<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.ships</groupId>
	<artifactId>RoomService</artifactId>
	<version>0.0.1</version>
	<name>Ships - room service</name>
	<description>Room service implementation for Ships project</description>

	<url>http://localhost:8080/</url>

	<scm>
		<url>https://gitlab.com/MJ211/RoomService</url>
	</scm>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.main.package>com.ships.ShipsRoomServiceApplication</project.main.package>

		<!-- plugin versions -->
		<version.enforcer.plugin>3.0.0-M3</version.enforcer.plugin>
		<version.maven.javadoc.plugin>3.2.0</version.maven.javadoc.plugin>
		<version.maven.required>3.6.3</version.maven.required>
		<version.maven.surefire.plugin>3.0.0-M5</version.maven.surefire.plugin>
		<version.plugin.maven.compiler>3.8.1</version.plugin.maven.compiler>
		<version.plugin.maven.dependency>3.1.2</version.plugin.maven.dependency>
		<version.plugin.maven.exec>3.0.0</version.plugin.maven.exec>
		<version.plugin.maven.jar>3.2.0</version.plugin.maven.jar>
		<version.plugin.maven.project.info.reports>3.1.1</version.plugin.maven.project.info.reports>
		<version.plugin.spotbugs>4.1.4</version.plugin.spotbugs>
		<version.pmd.plugin>3.14.0</version.pmd.plugin>
		<version.spring.boot.maven.plugin>2.4.1</version.spring.boot.maven.plugin>

		<!-- dependency versions -->
		<version.org.apache.maven.site.plugin>3.9.1</version.org.apache.maven.site.plugin>
		<version.com.github.spotbugs>4.2.0</version.com.github.spotbugs>
		<version.lombok>1.18.16</version.lombok>
		<version.org.jacoco>0.8.6</version.org.jacoco>
		<version.org.mockito.core>3.6.28</version.org.mockito.core>
		<version.org.testng>7.3.0</version.org.testng>
		<version.org.tinylog>2.2.1</version.org.tinylog>
		<version.spring.boot.starter>2.4.1</version.spring.boot.starter>
		<version.spring.security.config>5.4.2</version.spring.security.config>
		<version.spring.security.oauth2>2.5.0.RELEASE</version.spring.security.oauth2>
		<version.javax.servlet.api>4.0.1</version.javax.servlet.api>

	</properties>

	<dependencies>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${version.spring.boot.starter}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${version.spring.boot.starter}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${version.lombok}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${version.org.testng}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-api</artifactId>
			<version>${version.org.tinylog}</version>
		</dependency>

		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-impl</artifactId>
			<version>${version.org.tinylog}</version>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${version.org.mockito.core}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${version.spring.security.config}</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security.oauth</groupId>
			<artifactId>spring-security-oauth2</artifactId>
			<version>${version.spring.security.oauth2}</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${version.javax.servlet.api}</version>
			<scope>provided</scope>
		</dependency>

	</dependencies>


	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${version.spring.boot.maven.plugin}</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.plugin.maven.compiler}</version>
				<configuration>
					<release>${maven.compiler.release}</release>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${version.enforcer.plugin}</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${version.maven.required}</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${version.plugin.maven.dependency}</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>compile</includeScope>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${version.plugin.maven.jar}</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${project.main.package}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${version.org.jacoco}</version>
				<configuration>
					<excludes>
						<exclude>com/ships/ShipsRoomServiceApplication.class</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>

					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>

					<execution>
						<id>default-cli</id>
						<goals>
							<goal>check</goal>
						</goals>
						<configuration>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.60</minimum>
										</limit>
									</limits>
								</rule>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>BRANCH</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.60</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</execution>

					<execution>
						<id>report-aggregate</id>
						<phase>verify</phase>
						<goals>
							<goal>report-aggregate</goal>
						</goals>
						<configuration>
							<skip>true</skip>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${version.plugin.spotbugs}</version>
				<dependencies>
					<dependency>
						<groupId>com.github.spotbugs</groupId>
						<artifactId>spotbugs</artifactId>
						<version>${version.com.github.spotbugs}</version>
						<type>pom</type>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${version.maven.javadoc.plugin}</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${version.org.apache.maven.site.plugin}</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${version.pmd.plugin}</version>
				<configuration>
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.maven.surefire.plugin}</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.surefire</groupId>
						<artifactId>surefire-testng</artifactId>
						<version>${version.maven.surefire.plugin}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>${version.plugin.maven.project.info.reports}</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependencies</report>
							<report>distribution-management</report>
							<report>index</report>
							<report>issue-management</report>
							<report>mailing-lists</report>
							<report>plugins</report>
							<report>scm</report>
							<report>summary</report>
							<report>team</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>${version.pmd.plugin}</version>
				<configuration>
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${version.org.jacoco}</version>
				<configuration>
					<excludes>
						<exclude>com/ships/ShipsRoomServiceApplication.class</exclude>
					</excludes>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
							<report>report-integration</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<developers>
		<developer>
			<id>MJ211</id>
			<name>Michał Jędrzejkiewicz</name>
			<email>jedrzejkiewicz.michal@gmail.com</email>
			<roles>
				<role>captain</role>
				<role>developer</role>
			</roles>
		</developer>

		<developer>
			<id>Kamil-Jankowski</id>
			<name>Kamil Jankowski</name>
			<email>1990.kamil.jankowski@gmail.com</email>
			<roles>
				<role>developer</role>
			</roles>
		</developer>

		<developer>
			<id>choooobert</id>
			<name>Hubert Milczarek</name>
			<email>hb.milczarek@gmail.com</email>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

</project>
